# djbabel

./: .gitignore  README.md  REUSE.toml  default.nix  djbabel.spec  flake.nix  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml
LICENSES/: MIT.txt
doc/: Makefile  conf.py  index.rst  intro.rst  problems.rst  serato.rst  use.rst
src/djbabel/: __init__.py  cli.py  types.py  utils.py  version.py
src/djbabel/rekordbox/: __init__.py  read.py  types.py  utils.py  write.py
src/djbabel/serato/: __init__.py  analysis.py  autotags.py  beatgrid.py  crate.py  markers.py  markers2.py  overview.py  read.py  relvol.py  types.py  utils.py  videoassoc.py  write.py
src/djbabel/serato/crate/: read.py  write.py
src/djbabel/traktor/: __init__.py  read.py  utils.py  write.py
tests/: conftest.py  scratch.py  test_rekordbox.py  test_serato.py  test_traktor.py
tests/audio/: crate_write_test.flac  crate_write_test_ref.m4a
tests/nml/: test.nml
tests/rb7xml/: rbxml_test.xml
