[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djbabel"
authors = [
  { name="Federico Beffa", email="beffa@fbengineering.ch" },
]
description = "DJ Software playlists convertion tool"
# readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mutagen",
    "pillow"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
keywords = ["DJ", "Serato", "Serato DJ Pro", "RekordBox"]

dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[options.entry_points]
console_scripts =
    djbabel = djbabel.cli:main

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
include = ["src"]

[tool.hatch.build.targets.sdist]
include = ["/src/djbabel"]

[tool.hatch.build.targets.wheel]
packages = ["src/djbabel"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^']+)"

[project.urls]
Homepage = "https://gitlab.com/fbengineering/djbabel"
Documentation = "https://fbengineering.gitlab.io/djbabel"
